--- a/src/input.css
+++ b/src/input.css
@@ -14,12 +14,12 @@
     --secondary-font: "Inter";
     --primary-color: #624d9f;
     --secondary-color: #ffffff;
-    --accent1: #f3f8fd;
+    --accent1: #EFEDF5;
     --accent2: #db9fda;
     --accent3: #cce0f1;
     --accent4: #eeb13c;
     --black: #000000;
-    --border: #e2edf7;
+    --border: #E0DBEC;
     --border2: #f5f6f6;
     --border3: #f3f8fd;
     --text: #202124;
