--- a/src/output.css
+++ b/src/output.css
@@ -254,6 +254,9 @@
   .top-2 {
     top: calc(var(--spacing) * 2);
   }
+  .top-\[70\%\] {
+    top: 70%;
+  }
   .top-\[80\%\] {
     top: 80%;
   }
@@ -283,9 +286,6 @@
   }
   .bottom-\[90px\] {
     bottom: 90px;
-  }
-  .bottom-\[190px\] {
-    bottom: 190px;
   }
   .\!left-0 {
     left: calc(var(--spacing) * 0) !important;
@@ -319,12 +319,6 @@
   }
   .z-50 {
     z-index: 50;
-  }
-  .z-80 {
-    z-index: 80;
-  }
-  .z-100 {
-    z-index: 100;
   }
   .z-\[50\] {
     z-index: 50;
@@ -762,9 +756,6 @@
   }
   .items-center {
     align-items: center;
-  }
-  .items-end {
-    align-items: flex-end;
   }
   .items-start {
     align-items: flex-start;
@@ -1259,9 +1250,6 @@
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
-  .pt-2 {
-    padding-top: calc(var(--spacing) * 2);
-  }
   .pt-3 {
     padding-top: calc(var(--spacing) * 3);
   }
@@ -1289,8 +1277,14 @@
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
   }
+  .pb-3 {
+    padding-bottom: calc(var(--spacing) * 3);
+  }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
+  }
+  .pb-6 {
+    padding-bottom: calc(var(--spacing) * 6);
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
@@ -1620,13 +1614,6 @@
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
         stroke: var(--secondary-color);
-      }
-    }
-  }
-  .group-hover\:stroke-amber-200 {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        stroke: var(--color-amber-200);
       }
     }
   }
@@ -2022,21 +2009,6 @@
       font-size: 44px;
     }
   }
-  .lg\:right-8 {
-    @media (width >= 64rem) {
-      right: calc(var(--spacing) * 8);
-    }
-  }
-  .lg\:bottom-8 {
-    @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * 8);
-    }
-  }
-  .lg\:left-8 {
-    @media (width >= 64rem) {
-      left: calc(var(--spacing) * 8);
-    }
-  }
   .lg\:col-span-2 {
     @media (width >= 64rem) {
       grid-column: span 2 / span 2;
@@ -2050,11 +2022,6 @@
   .lg\:mt-10 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 10);
-    }
-  }
-  .lg\:mr-\[16px\] {
-    @media (width >= 64rem) {
-      margin-right: 16px;
     }
   }
   .lg\:mb-0 {
@@ -2153,29 +2120,9 @@
       right: calc(var(--spacing) * 8);
     }
   }
-  .xl\:bottom-8 {
-    @media (width >= 80rem) {
-      bottom: calc(var(--spacing) * 8);
-    }
-  }
   .xl\:bottom-12 {
     @media (width >= 80rem) {
       bottom: calc(var(--spacing) * 12);
-    }
-  }
-  .xl\:bottom-16 {
-    @media (width >= 80rem) {
-      bottom: calc(var(--spacing) * 16);
-    }
-  }
-  .xl\:bottom-20 {
-    @media (width >= 80rem) {
-      bottom: calc(var(--spacing) * 20);
-    }
-  }
-  .xl\:bottom-\[190px\] {
-    @media (width >= 80rem) {
-      bottom: 190px;
     }
   }
   .xl\:left-8 {
