--- a/placeholder/src/output.css
+++ b/placeholder/src/output.css
@@ -9,9 +9,12 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-100: oklch(93.6% 0.032 17.717);
     --color-red-500: oklch(63.7% 0.237 25.331);
+    --color-red-600: oklch(57.7% 0.245 27.325);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
     --color-yellow-500: oklch(79.5% 0.184 86.047);
+    --color-green-100: oklch(96.2% 0.044 156.743);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-emerald-600: oklch(59.6% 0.145 163.225);
     --color-blue-600: oklch(54.6% 0.245 262.881);
@@ -44,6 +47,8 @@
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-4xl: 2.25rem;
+    --text-4xl--line-height: calc(2.5 / 2.25);
     --text-6xl: 3.75rem;
     --text-6xl--line-height: 1;
     --font-weight-normal: 400;
@@ -244,9 +249,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -318,9 +320,6 @@
   }
   .z-\[50\] {
     z-index: 50;
-  }
-  .z-\[150\] {
-    z-index: 150;
   }
   .z-\[200\] {
     z-index: 200;
@@ -490,9 +489,6 @@
   .inline-flex {
     display: inline-flex;
   }
-  .table {
-    display: table;
-  }
   .aspect-\[6\/4\] {
     aspect-ratio: 6/4;
   }
@@ -507,9 +503,6 @@
   }
   .h-1 {
     height: calc(var(--spacing) * 1);
-  }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
   }
   .h-2\.5 {
     height: calc(var(--spacing) * 2.5);
@@ -562,9 +555,6 @@
   .h-\[50px\] {
     height: 50px;
   }
-  .h-\[100\%\] {
-    height: 100%;
-  }
   .h-\[140px\] {
     height: 140px;
   }
@@ -573,6 +563,9 @@
   }
   .h-\[calc\(100\%-120px\)\] {
     height: calc(100% - 120px);
+  }
+  .h-\[calc\(100vh-280px\)\] {
+    height: calc(100vh - 280px);
   }
   .h-full {
     height: 100%;
@@ -585,9 +578,6 @@
   }
   .max-h-\[250px\] {
     max-height: 250px;
-  }
-  .max-h-\[calc\(100vh-280px\)\] {
-    max-height: calc(100vh - 280px);
   }
   .max-h-screen {
     max-height: 100vh;
@@ -685,14 +675,8 @@
   .flex-1 {
     flex: 1;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .flex-shrink-0 {
     flex-shrink: 0;
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .origin-center {
     transform-origin: center;
@@ -703,10 +687,6 @@
   }
   .translate-x-full {
     --tw-translate-x: 100%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
@@ -897,9 +877,6 @@
   }
   .overflow-visible {
     overflow: visible;
-  }
-  .overflow-x-auto {
-    overflow-x: auto;
   }
   .overflow-y-auto {
     overflow-y: auto;
@@ -1102,6 +1079,12 @@
   .bg-gray-300 {
     background-color: var(--color-gray-300);
   }
+  .bg-green-100 {
+    background-color: var(--color-green-100);
+  }
+  .bg-red-100 {
+    background-color: var(--color-red-100);
+  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -1114,12 +1097,6 @@
   .bg-\[url\(\.\.\/assets\/img\/home\/CTA-bg\.png\)\] {
     background-image: url(../assets/img/home/CTA-bg.png);
   }
-  .bg-\[url\(\.\.\/assets\/img\/home\/Offer-1\.png\)\] {
-    background-image: url(../assets/img/home/Offer-1.png);
-  }
-  .bg-\[url\(\.\.\/assets\/img\/home\/Offer-2\.png\)\] {
-    background-image: url(../assets/img/home/Offer-2.png);
-  }
   .bg-\[url\(\.\.\/assets\/img\/home\/deals\.png\)\] {
     background-image: url(../assets/img/home/deals.png);
   }
@@ -1128,12 +1105,6 @@
   }
   .bg-\[url\(\.\.\/assets\/img\/home\/hero\.png\)\] {
     background-image: url(../assets/img/home/hero.png);
-  }
-  .bg-\[url\(\.\.\/assets\/img\/product\/hero-1\.png\)\] {
-    background-image: url(../assets/img/product/hero-1.png);
-  }
-  .bg-\[url\(\.\.\/assets\/img\/product\/page-hero\.png\)\] {
-    background-image: url(../assets/img/product/page-hero.png);
   }
   .bg-cover {
     background-size: cover;
@@ -1212,9 +1183,6 @@
   }
   .\!py-1 {
     padding-block: calc(var(--spacing) * 1) !important;
-  }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
   }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
@@ -1309,9 +1277,6 @@
   .text-center {
     text-align: center;
   }
-  .text-left {
-    text-align: left;
-  }
   .text-right {
     text-align: right;
   }
@@ -1329,13 +1294,13 @@
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
   .text-6xl {
     font-size: var(--text-6xl);
     line-height: var(--tw-leading, var(--text-6xl--line-height));
-  }
-  .text-base {
-    font-size: var(--text-base);
-    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-base\/12 {
     font-size: var(--text-base);
@@ -1356,9 +1321,6 @@
   .text-xs {
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
-  }
-  .\!text-\[16px\] {
-    font-size: 16px !important;
   }
   .text-\[12px\] {
     font-size: 12px;
@@ -1420,9 +1382,6 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .whitespace-nowrap {
-    white-space: nowrap;
-  }
   .text-\[var\(--accent4\)\] {
     color: var(--accent4);
   }
@@ -1464,6 +1423,9 @@
   }
   .text-red-500 {
     color: var(--color-red-500);
+  }
+  .text-red-600 {
+    color: var(--color-red-600);
   }
   .text-yellow-400 {
     color: var(--color-yellow-400);
@@ -1509,10 +1471,6 @@
   }
   .ring-transparent {
     --tw-ring-color: transparent;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .drop-shadow-\[0_0_4px_rgba\(0\,0\,0\,0\.10\)\] {
     --tw-drop-shadow-size: drop-shadow(0 0 4px var(--tw-drop-shadow-color, rgba(0,0,0,0.10)));
@@ -1698,13 +1656,6 @@
         @supports (color: color-mix(in lab, red, red)) {
           background-color: color-mix(in oklab, var(--color-black) 70%, transparent);
         }
-      }
-    }
-  }
-  .hover\:bg-gray-200 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-200);
       }
     }
   }
@@ -1943,6 +1894,11 @@
       gap: calc(var(--spacing) * 4);
     }
   }
+  .md\:gap-6 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 6);
+    }
+  }
   .md\:gap-\[40px\] {
     @media (width >= 48rem) {
       gap: 40px;
@@ -2041,11 +1997,6 @@
       display: block;
     }
   }
-  .lg\:flex {
-    @media (width >= 64rem) {
-      display: flex;
-    }
-  }
   .lg\:hidden {
     @media (width >= 64rem) {
       display: none;
@@ -2089,6 +2040,11 @@
   .lg\:grid-cols-3 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-4 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
   .lg\:grid-cols-5 {
@@ -2446,11 +2402,6 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -2553,7 +2504,6 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
